# alogamous

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
data/: ex_log_01.txt  ex_log_02.txt  loading.txt  messages_clustered_at_time.txt  more_messages_day_over_day2.txt  stacktrace.txt  test_output_file.txt
data/example_logs/: ex_log_01.txt  repeats.txt
data/example_logs2/: more_messages_day_over_day1.txt
scripts/: generate_coverage_summary.py
src/alogamous/: __main__.py  analyzer.py  daily_count_analyzer.py  daily_warning_analyzer.py  directory_reader.py  echo_analyzer.py  error_counter_analyzer.py  example.py  flag_duplicate_log_messages.py  format_analyzer.py  line_count_analyzer.py  log_line_parser.py  log_line_utility.py  loginfo_analyzer.py  peak_time_analyzer.py  stack_trace_analyzer.py  startup_header_analyzer.py  warning_analyzer.py
tests/: analyze_log_stream_test.py  daily_count_analyzer_test.py  daily_warning_analyzer_test.py  echo_analyzer_test.py  example_test.py  flag_duplicate_log_messages_test.py  format_analyzer_test.py  info_counter_test.py  line_count_analyzer_test.py  log_line_parser_test.py  peak_time_analyzer_test.py  stack_trace_analyzer_test.py  startup_header_analyzer_test.py  test_error_counter.py  warning_analyzer_test.py
